2005-02-23 Ian Rutt
 * More reorganisation and pruning
 * Set all times and timesteps in GLINT to be in *hours*, converted to
   years when calling GLIDE
 * All times in GLINT are integer type
 * Implemented mass-balance timesteps in GLINT - all instances must have
   the same mass-balance timestep
 * Moved specification of earth's radius in glimmer_proj.f90 to config file
   input
 * New file - glint_constants.f90 - mostly for conversion between different
   time units.
 * Removed redundant Matlab code
 * Removed redundant config files from data directory
 * Renamed enmabal module to glint_enmabal

2005-02-22 Ian Rutt
 * Substantial reorganisation of GLINT. 
 * Added wrapper for mass-balance schemes (glint_mbal.f90)
 * Moved some parts of timestep into glint_climate.f90
 * Build may need fixing under Linux
 * Variable mass-balance timestep still to be reimplemented

2005-02-22 Magnus Hagdorn
 * glide_types.f90: fixed two bugs where arrays had the wrong size

2005-02-21 Ian Rutt
 * Removed redundant argument from calcacab call in GLINT
 * Fixed lapse-rate adjustment problem in GLINT
 * Removed scaling on output of precip field in GLINT

2005-02-18 Ian Rutt
 * Added fix_acab call to glint_timestep.f90
 * Converted precip to m in glint_timestep.f90

2005-02-17 Ian Rutt
 * Tidied up GLINT pdd scheme and added config file handling
 * Major pruning of redundant forcing code in GLINT, and general
   reorganisation. Not fully functional yet.
 * Began bugfixing on GLINT
 * Fixed problem with accessor functions - get_nsn was returning ewn!
	
2005-02-16 Ian Rutt
 * First stage of making sure GLINT does what it should. Build
   successfully, but as yet untested.

2005-02-16 Magnus Hagdorn
 * glide.f90: load glide_io module into glide module name space
 * glide_types.f90: added some static accessor functions
 * ncdf_template.f90.in: add autogenerate accessors
 * generate_ncvars.py: generate accessor functions

2005-02-16 Magnus Hagdorn